add citation for original paper for 3Ddet

--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -1086,3 +1086,40 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{massMap3D-Hu2002,
+       author = {{Hu}, Wayne and {Keeton}, Charles R.},
+        title = "{Three-dimensional mapping of dark matter}",
+      journal = {\prd},
+     keywords = {95.35.+d, Dark matter, Astrophysics},
+         year = 2002,
+        month = sep,
+       volume = {66},
+       number = {6},
+          eid = {063506},
+        pages = {063506},
+          doi = {10.1103/PhysRevD.66.063506},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0205412},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002PhRvD..66f3506H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{massMap3D-Bacon2003,
+       author = {{Bacon}, D.~J. and {Taylor}, A.~N.},
+        title = "{Mapping the 3D dark matter potential with weak shear}",
+      journal = {\mnras},
+     keywords = {gravitation, gravitational lensing, cosmology: observations, dark matter, large-scale structure of Universe, Astrophysics},
+         year = 2003,
+        month = oct,
+       volume = {344},
+       number = {4},
+        pages = {1307-1326},
+          doi = {10.1046/j.1365-8711.2003.06922.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0212266},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003MNRAS.344.1307B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
