--- a/doc/paper_ms_method_HSCY1/ms.tex
+++ b/doc/paper_ms_method_HSCY1/ms.tex
@@ -156,14 +156,14 @@ for each cluster selected from $2$-D mass maps.
 
 On the other hand, we can directly reconstruct three-dimensional ($3$-D) mass
 maps taking advantage of photometric redshift (photo-$z$) information
-\citep{LSS-massMap-Wiener-Simon2009,WL-massMap-VanderPlas2011}; however, these
-methods either do not have enough spatial resolution to identify clusters, or
-they suffer from smearing along the line of sight direction, which need to be
-overcome for practical searches of clusters in 3D mass maps.  Alternatively,
-\citet{WL-clusDet-Hennawi2005} propose to perform a maximum-likelihood
-detection of clusters, by convolving tomographic shear measurements with $3$-D
-filters that match the tangential shears induced by multi-scale NFW halos,
-without fully reconstruct the $3$-D mass maps.
+\citep{massMap3D-Hu2002,massMap3D-Bacon2003,LSS-massMap-Wiener-Simon2009,WL-massMap-VanderPlas2011};
+however, these methods either do not have enough spatial resolution to identify
+clusters, or they suffer from smearing along the line of sight direction, which
+need to be overcome for practical searches of clusters in 3D mass maps.
+Alternatively, \citet{WL-clusDet-Hennawi2005} propose to perform a
+maximum-likelihood detection of clusters, by convolving tomographic shear
+measurements with $3$-D filters that match the tangential shears induced by
+multi-scale NFW halos, without fully reconstruct the $3$-D mass maps.
 
 In this paper, we develop a novel method for high-resolution $3$-D mass map
 reconstruction that are free from line of sight smearing.  The $3$-D
@@ -217,7 +217,6 @@ dictionary (Section \ref{subsec_test-pm}).
 \subsection{Point mass atoms}
 \label{subsec_test-pm}
 \input{sparse_PointMass_results.tex}
-
 
 
 \section{Summary}
