delete unused figures

--- a/doc/paper_ms_method_HSCY1/ms.tex
+++ b/doc/paper_ms_method_HSCY1/ms.tex
@@ -192,7 +192,6 @@ the method.
 \label{sec_Method}
 \input{massmap_method.tex}
 
-
 \section{Cluster Detection}
 \label{sec_Test}
 
@@ -212,11 +211,11 @@ dictionary (Section \ref{subsec_test-pm}).
 
 \subsection{NFW atoms}
 \label{subsec_test-nfw}
-\input{sparse_NFW_results.tex}
+\input{sim_NFW_results.tex}
 
 \subsection{Point mass atoms}
 \label{subsec_test-pm}
-\input{sparse_PointMass_results.tex}
+\input{sim_PointMass_results.tex}
 
 
 \section{Summary}
