pixelize g1/g2 field; estimate lensing kernel

--- a/notebook/s19/1_1-prepare_smallcat.ipynb
+++ b/notebook/s19/1_1-prepare_smallcat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "import glob\n",
     "import numpy as np\n",
     "import astropy.io.fits as pyfits\n",
-    "import astropy.table as astTab\n",
+    "import astropy.table as astTable\n",
     "import maputil as mapUtil"
    ]
   },
@@ -167,66 +167,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pixelization"
+    "# Match Poz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['wrkDir/reGaus_catalog/XMM_groups/src-group-00.fits', 'wrkDir/reGaus_catalog/XMM_groups/src-group-10.fits', 'wrkDir/reGaus_catalog/XMM_groups/src-group-11.fits', 'wrkDir/reGaus_catalog/XMM_groups/src-group-01.fits']\n"
+      "[9004, 9005, 9006, 9007, 9008, 8762, 8763, 8764, 8765, 8766, 8520, 8521, 8522, 8523, 8524, 8279, 8280, 8281, 8282, 8283]\n",
+      "[8520, 8521, 8522, 8523, 8524, 9004, 9005, 9006, 9007, 9008, 9246, 8762, 8763, 8764, 8765, 8766, 9247]\n",
+      "[8768, 8522, 8523, 8524, 8525, 8526, 9006, 9007, 9008, 9009, 9010, 8764, 8765, 8766, 8767]\n",
+      "[9006, 9007, 9008, 9009, 9010, 8764, 8765, 8766, 8767, 8768, 8522, 8523, 8524, 8525, 8526, 8281, 8282, 8283, 8284, 8285]\n",
+      "[9808, 9809, 9810, 9811, 9812, 9565, 9566, 9567, 9568, 9569, 9570, 9322, 9323, 9324, 9325, 9326, 9327, 9080, 9081, 9082, 9083, 9084]\n",
+      "[9804, 9805, 9806, 9807, 9808, 9809, 9562, 9563, 9564, 9565, 9566, 9319, 9320, 9321, 9322, 9323, 9077, 9078, 9079, 9080, 9081]\n",
+      "[9798, 9799, 9800, 9801, 9802, 9556, 9557, 9558, 9559, 9560, 9313, 9314, 9315, 9316, 9317, 9070, 9071, 9072, 9073, 9074]\n",
+      "[10283, 10284, 10285, 10286, 10287, 10040, 10041, 10042, 10043, 10044, 10045, 9798, 9799, 9800, 9801, 9802, 9803, 9556, 9557, 9558, 9559, 9560]\n",
+      "[10289, 10290, 10291, 10047, 10048, 10049, 10050, 10051, 10052, 10053, 9805, 9806, 9807, 9808, 9809, 9810, 9811, 9563, 9564, 9565, 9566, 9567, 9568]\n",
+      "[10285, 10286, 10287, 10288, 10289, 10290, 10291, 10043, 10044, 10045, 10046, 10047, 10048, 10049, 9801, 9802, 9803, 9804, 9805, 9806, 9807, 9559, 9560, 9561, 9562, 9563, 9564]\n",
+      "[10051, 10052, 10053, 10054, 10055, 10056, 9809, 9810, 9811, 9812, 9813, 9814, 9815, 9567, 9568, 9569, 9570, 9571, 9572]\n",
+      "[9801, 9802, 9803, 9804, 9805, 9806, 9558, 9559, 9560, 9561, 9562, 9563, 9315, 9316, 9317, 9318, 9319, 9320, 9073, 9074, 9075, 9076, 9077, 9078]\n",
+      "[9811, 9812, 9813, 9814, 9815, 9568, 9569, 9570, 9571, 9572, 9325, 9326, 9327, 9328, 9329, 9083, 9084, 9085, 9086]\n",
+      "[9344, 9345, 9346, 9098, 9099, 9100, 9101, 9102, 9103, 9829, 9830, 9831, 9832, 9584, 9585, 9586, 9587, 9588, 9589, 9341, 9342, 9343]\n",
+      "[9096, 9097, 9098, 9099, 9100, 9580, 9581, 9582, 9583, 9584, 9585, 9337, 9338, 9339, 9340, 9341, 9342]\n",
+      "[9088, 9089, 9090, 9091, 9573, 9574, 9575, 9576, 9577, 9578, 9330, 9331, 9332, 9333, 9334, 9335, 9816]\n",
+      "[9349, 9350, 9351, 9352, 9353, 9354, 9106, 9107, 9108, 9109, 9110, 9111, 9834, 9835, 9836, 9837, 9838, 9592, 9593, 9594, 9595, 9596, 9597]\n",
+      "[9600, 9601, 9352, 9353, 9354, 9355, 9356, 9357, 9358, 9110, 9111, 9112, 9113, 9114, 9115, 9595, 9596, 9597, 9598, 9599]\n",
+      "[9829, 9830, 9831, 9832, 10313, 10314, 10315, 10316, 9586, 9587, 9588, 9589, 9590, 10071, 10072, 10073, 10074]\n",
+      "[9834, 9835, 9836, 9837, 9838, 9591, 9592, 9593, 9594, 9595, 10076, 10077, 10078, 10079]\n",
+      "[9600, 9601, 9602, 9603, 9604, 9356, 9357, 9358, 9359, 9360, 9361, 9114, 9115, 9116, 9117, 9118, 9599]\n",
+      "[9831, 9832, 9833, 9834, 9835, 10315, 10316, 10317, 9588, 9589, 9590, 9591, 9592, 10073, 10074, 10075, 10076, 10077]\n",
+      "[9091, 9096, 9576, 9577, 9578, 9579, 9580, 9581, 9333, 9334, 9335, 9336, 9337, 9338]\n",
+      "[9345, 9346, 9347, 9348, 9349, 9350, 9102, 9103, 9104, 9105, 9106, 9107, 9830, 9831, 9832, 9833, 9834, 9835, 9588, 9589, 9590, 9591, 9592, 9593]\n",
+      "[9376, 9377, 9378, 9132, 9133, 9134, 9135, 9617, 9618, 9619, 9620, 9621, 9374, 9375]\n",
+      "[9376, 9129, 9130, 9131, 9132, 9133, 9614, 9615, 9616, 9617, 9618, 9619, 9371, 9372, 9373, 9374, 9375]\n",
+      "[9123, 9124, 9125, 9126, 9127, 9608, 9609, 9610, 9611, 9612, 9365, 9366, 9367, 9368, 9369]\n",
+      "[9125, 9126, 9127, 9128, 9129, 9130, 9611, 9612, 9613, 9614, 9615, 9368, 9369, 9370, 9371, 9372]\n",
+      "[9703, 9704, 9705, 9706, 9707, 9708, 9946, 9460, 9461, 9462, 9463, 9464, 9465, 9945, 9947, 9948, 9949, 9950]\n",
+      "[10183, 10184, 10185, 9941, 9942, 9943, 9944, 9945, 9946, 9699, 9700, 9701, 9702, 9703, 9704, 9456, 9457, 9458, 9459, 9460, 9461]\n",
+      "[10176, 10177, 10178, 10179, 10180, 10181, 9934, 9935, 9936, 9937, 9938, 9939, 9692, 9693, 9694, 9695, 9696, 9697, 9449, 9450, 9451, 9452, 9453, 9454]\n",
+      "[9952, 9953, 9226, 9227, 9228, 9710, 9711, 9712, 9713, 9714, 9467, 9468, 9469, 9470, 9471]\n",
+      "[10418, 10419, 10420, 10421, 10422, 10423, 10176, 10177, 10178, 10179, 10180, 10181, 9934, 9935, 9936, 9937, 9938, 9939, 9692, 9693, 9694, 9695, 9696, 9697]\n",
+      "[10422, 10423, 10424, 10425, 10426, 10180, 10181, 10182, 10183, 10184, 10185, 9938, 9939, 9940, 9941, 9942, 9943, 9696, 9697, 9698, 9699, 9700, 9701]\n",
+      "[10179, 10180, 10181, 10182, 10183, 10184, 9937, 9938, 9939, 9940, 9941, 9942, 9695, 9696, 9697, 9698, 9699, 9700, 9452, 9453, 9454, 9455, 9456, 9457]\n",
+      "[9952, 9953, 9948, 9706, 9707, 9708, 9709, 9710, 9711, 9463, 9464, 9465, 9466, 9467, 9468, 9949, 9950, 9951]\n",
+      "[16001, 16002, 16003, 16004, 16005, 15823, 15824, 15825, 15826]\n",
+      "[16000, 16001, 16002, 15820, 15821, 15822, 15823, 15824, 15998, 15999]\n",
+      "[15815, 15816, 15817, 15818, 15994, 15995, 15996, 15997]\n",
+      "[16006, 16007, 16008, 16009, 16010, 15828, 15829, 15830, 15831, 15832]\n",
+      "[16009, 16010, 16011, 16012, 15831, 15832, 15833, 15834]\n",
+      "[15817, 15818, 15819, 15820, 15821, 15996, 15997, 15998, 15999]\n",
+      "[16004, 16005, 16006, 16007, 15825, 15826, 15827, 15828, 15829]\n"
      ]
     }
    ],
    "source": [
+    "pnames=['dempz','dnnz','mizuki']\n",
     "for fieldname in mapUtil.field_names:\n",
-    "    outDir='wrkDir/reGaus_catalog/%s_groups/' %fieldname\n",
-    "    assert os.path.isdir(outDir)\n",
-    "    fnames=glob.glob(os.path.join(outDir,'src-group-*.fits'))\n",
-    "    print(fnames)\n",
+    "    inDir='wrkDir/reGaus_catalog/%s_groups/' %fieldname\n",
+    "    pzDir=os.path.join('datDir/catalog_tracts/','%s_tracts/' %fieldname)\n",
+    "    assert os.path.isdir(inDir)\n",
+    "    fnames=glob.glob(os.path.join(inDir,'src-group-*.fits'))\n",
     "    for fname in fnames:\n",
-    "        assert os.path.isfile(fname)\n",
-    "        data=pyfits.getdata(fname)\n",
-    "        break\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tract',\n",
-       " 'Id',\n",
-       " 'ra',\n",
-       " 'dec',\n",
-       " 'g1',\n",
-       " 'g2',\n",
-       " 'weight',\n",
-       " 'bias_m',\n",
-       " 'dnn_zbest',\n",
-       " 'dnn_zbest_std',\n",
-       " 'demp_zbest',\n",
-       " 'demp_zbest_std',\n",
-       " 'mizuki_zbest',\n",
-       " 'mizuki_zbest_std']"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.names"
+    "        data=astTable.Table.read(fname)\n",
+    "        ids=data['Id',]\n",
+    "        ids.rename_column('Id','ID')\n",
+    "        tracts=list(set(data['tract']))\n",
+    "        print(tracts)\n",
+    "        pzAll=[]\n",
+    "        for tract in tracts:\n",
+    "            key=pnames[0]\n",
+    "            pfname=os.path.join(pzDir,'%s_pz_pdf_%s.fits' %(tract,key))\n",
+    "            pzs=astTable.Table.read(pfname)\n",
+    "            pzAll.append(astTable.join(left=ids,right=pzs,keys='ID',join_type='inner'))\n",
+    "            del pzs,pfname\n",
+    "            gc.collect()\n",
+    "        pzAll=astTable.vstack(pzAll)\n",
+    "        pzAll.sort('ID')\n",
+    "        assert np.all(data['Id']==pzAll['ID'])\n",
+    "        del ids,tracts,data\n",
+    "        gn=fname.split('-')[-1].split('.')[0]\n",
+    "        ofname=os.path.join(inDir,'poz-%s-group-%s.fits' %(key,gn))\n",
+    "        pzAll.write(ofname)\n",
+    "        del pzAll\n",
+    "        gc.collect()"
    ]
   },
   {
@@ -326,28 +354,6 @@
    ],
    "source": [
     "plt.plot(x[:-1],up/down)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.06      , 0.36000001, 0.5       , 0.62      , 0.73000002,\n",
-       "       0.85000002, 0.94999999, 1.10000002, 1.24000001, 1.5       ,\n",
-       "       2.99000001])"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bins"
    ]
   },
   {
