--- a/notebook/s19/2_0-pixelation-gal-3D.ipynb
+++ b/notebook/s19/2_0-pixelation-gal-3D.ipynb
@@ -25,15 +25,11 @@
     "%pylab inline\n",
     "import os\n",
     "import gc\n",
-    "import matplotlib\n",
     "import numpy as np\n",
     "import astropy.io.fits as pyfits\n",
-    "import astropy.table as astTab\n",
-    "import massmap_utilities as mutilities\n",
+    "import maputil as mutilities\n",
     "from configparser import ConfigParser\n",
-    "from pixel3D import cartesianGrid3D\n",
-    "from scipy.stats import norm as statnorm\n",
-    "import haloSim"
+    "from pixel3D import cartesianGrid3D"
    ]
   },
   {
@@ -42,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "configName  =   'wrkDir/config-nl20.ini'\n",
+    "configName  =   'wrkDir/config-nl15.ini'\n",
     "parser      =   ConfigParser()\n",
     "parser.read(configName)\n",
     "outDir      =   'wrkDir/galmap3D/'"
@@ -90,12 +86,6 @@
     "    # w*g1,w*g2,w for each pixel\n",
     "    weightOutTmp=numpy.histogramdd((z,y,x),bins=(gridInfo.zlbound,gridInfo.ybound,gridInfo.xbound))[0]\n",
     "    mask0=weightOutTmp>0. # the mask before smoothing\n",
-    "    if gridInfo.sigma>0:\n",
-    "        # Gaussian Kernel in Fourier space (normalized in configuration space)\n",
-    "        gausKer=haloSim.GausAtom(ny=ny,nx=nx,sigma=gridInfo.sigma/gridInfo.delta,fou=True,lnorm=2.)\n",
-    "        norm=gausKer[0,0]\n",
-    "        gausKer/=norm\n",
-    "    \n",
     "    pyfits.writeto(os.path.join(outDir,'%s_dnnz_10_bins_numMap.fits' %fieldname),weightOut,overwrite=True)\n",
     "    del weightOut\n",
     "    gc.collect()"
