--- a/notebook/s19/1_2-prepare_poz_stack.ipynb
+++ b/notebook/s19/1_2-prepare_poz_stack.ipynb
@@ -41,40 +41,7 @@
     "configName  =   'wrkDir/config-nl15.ini'\n",
     "pDict={'dempz': 'demp',\\\n",
     "       'dnnz': 'dnn',\\\n",
-    "       'mizuki': 'mizuki'}\n",
-    "\n",
-    "def plotPozAve(fieldname,pozBin,pozAve,oname):\n",
-    "    plt.close()\n",
-    "    for i in range(0,10):\n",
-    "        plt.plot(pozBin,pozAve[i],label=r'zbin:%d' %(i+1))\n",
-    "    plt.xlim(-0.1,3)\n",
-    "    plt.ylim(0.,0.082)\n",
-    "    plt.legend()\n",
-    "    plt.xlabel('z',fontsize=15)\n",
-    "    plt.ylabel('PDF',fontsize=15)\n",
-    "    plt.title(fieldname)\n",
-    "    plt.grid()\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(oname)\n",
-    "    plt.close()\n",
-    "    return\n",
-    "\n",
-    "def plotLensKernel(fieldname,zcgrid,lensKernel1,lensKernel2,oname):\n",
-    "    plt.close()\n",
-    "    cmap=plt.get_cmap('tab20')\n",
-    "    for i in range(0,15,2):\n",
-    "        norm1=np.sqrt(np.sum(lensKernel1[:,i]**2.))\n",
-    "        norm2=np.sqrt(np.sum(lensKernel2[:,i]**2.))\n",
-    "        plt.plot(zcgrid,lensKernel1[:,i]/norm1,'-',c=cmap(i))\n",
-    "        plt.plot(zcgrid,lensKernel2[:,i]/norm2,'--',c=cmap(i))\n",
-    "    plt.xlabel(r'$z_s$',fontsize=15)\n",
-    "    plt.ylabel('lensing kernel',fontsize=15)\n",
-    "    plt.grid()\n",
-    "    plt.title(fieldname)\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(oname)\n",
-    "    plt.close()\n",
-    "    return"
+    "       'mizuki': 'mizuki'}"
    ]
   },
   {
@@ -125,7 +92,7 @@
     "            del data,pata,out\n",
     "            gc.collect()\n",
     "        outname2=os.path.join(outDir,'group-%s-%s-10bins-pozave.png' %(gn,key))\n",
-    "        plotPozAve(glab,pbins,poz_ave,outname2)\n",
+    "        mapUtil.plotPozAve(glab,pbins,poz_ave,outname2)\n",
     "        \n",
     "        # configuration\n",
     "        parser      =   ConfigParser()\n",
@@ -135,15 +102,15 @@
     "        # lensing kernel\n",
     "        outname3=os.path.join(outDir,'group-%s-%s-10bins-lensker.fits' %(gn,key))\n",
     "        if os.path.isfile(outname3):\n",
-    "            lensKer1=pyfits.getdata(outname3,ext=0)\n",
-    "            lensKer2=pyfits.getdata(outname3,ext=1)\n",
+    "            lensKer2=pyfits.getdata(outname3,ext=0)\n",
+    "            lensKer1=pyfits.getdata(outname3,ext=1)\n",
     "        else:\n",
     "            lensKer1= gridInfo.lensing_kernel()\n",
     "            lensKer2= gridInfo.lensing_kernel(poz_grids=pbins,poz_ave=poz_ave)\n",
-    "            out=pyfits.HDUList([pyfits.PrimaryHDU(lensKer1),pyfits.ImageHDU(lensKer2)])\n",
+    "            out=pyfits.HDUList([pyfits.PrimaryHDU(lensKer2),pyfits.ImageHDU(lensKer1)])\n",
     "            out.writeto(outname3,overwrite=True)\n",
     "        outname4=os.path.join(outDir,'group-%s-%s-10bins-lensker.png' %(gn,key))\n",
-    "        plotLensKernel(glab,gridInfo.zcgrid,lensKer1,lensKer2,outname4)"
+    "        mapUtil.plotLensKernel(glab,gridInfo.zcgrid,lensKer1,lensKer2,outname4)"
    ]
   }
  ],
