--- a/notebook/s19/2_0-pixelation-gal-3D.ipynb
+++ b/notebook/s19/2_0-pixelation-gal-3D.ipynb
@@ -27,7 +27,7 @@
     "import gc\n",
     "import numpy as np\n",
     "import astropy.io.fits as pyfits\n",
-    "import maputil as mutilities\n",
+    "import catuitl\n",
     "from configparser import ConfigParser\n",
     "from pixel3D import cartesianGrid3D"
    ]
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "for fieldname in mutilities.field_names:\n",
+    "for fieldname in catutil.field_names:\n",
     "    infname='wrkDir/reGaus_catalog/%s.fits' %(fieldname)\n",
     "    data=pyfits.getdata(infname)\n",
     "    if fieldname=='VVDS':\n",
