--- a/notebook/s19/2_2-pixelation-3D.ipynb
+++ b/notebook/s19/2_2-pixelation-3D.ipynb
@@ -28,7 +28,7 @@
     "import glob\n",
     "import numpy as np\n",
     "import astropy.io.fits as pyfits\n",
-    "import maputil as mapUtil\n",
+    "import catutil\n",
     "from configparser import ConfigParser\n",
     "from pixel3D import cartesianGrid3D\n",
     "from scipy.stats import norm as statnorm"
@@ -85,7 +85,7 @@
    "source": [
     "key='dempz'\n",
     "colname=pDict[key]\n",
-    "for fieldname in mapUtil.field_names:\n",
+    "for fieldname in catutil.field_names:\n",
     "    inDir  =   'wrkDir/reGaus_catalog/%s_groups/' %fieldname\n",
     "    outDir =   'wrkDir/reGaus_pixel3D/%s_groups/' %fieldname\n",
     "    if not os.path.isdir(outDir):\n",
