consistent mask over redshfits

--- a/notebook/s193D/mayavi3DcontourPlot.ipynb
+++ b/notebook/s193D/mayavi3DcontourPlot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -18,11 +18,11 @@
     "import astropy.io.fits as pyfits\n",
     "from mayavi import mlab\n",
     "from configparser import ConfigParser\n",
-    "configName  =   'wrkDir/config-nl20.ini'\n",
+    "configName  =   'wrkDir/config-nl10.ini'\n",
     "parser      =   ConfigParser()\n",
     "parser.read(configName)\n",
-    "raMin=31.;raMax=34.\n",
-    "decMin=-5.5;decMax=-2.5"
+    "raMin=32.5;raMax=33.5\n",
+    "decMin=-4.;decMax=-3."
    ]
   },
   {
