--- a/notebook/sim/mayavi3DcontourPlot.ipynb
+++ b/notebook/sim/mayavi3DcontourPlot.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/work/xiangchong.li/work/massMapSparse/sim\n"
+     ]
+    }
+   ],
    "source": [
     "cd wrkDir/sim"
    ]
@@ -80,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "planck-cosmo/sparse-f1-3/halo17/deltaR-sim52-alasso2.fits\n",
+      "planck-cosmo/sparse-f3-3/halo17/deltaR-sim52-alasso2.fits\n"
+     ]
+    }
+   ],
    "source": [
     "hn='17'\n",
     "sn='52'\n",
@@ -92,7 +109,9 @@
     "ner='wn' #wn/nn\n",
     "fname1='planck-cosmo/sparse-f1-3/halo%s/deltaR-sim%s-alasso2.fits' %(hn,sn)\n",
     "data1=pyfits.getdata(fname1)\n",
+    "print(fname1)\n",
     "fname2='planck-cosmo/sparse-f3-3/halo%s/deltaR-sim%s-alasso2.fits' %(hn,sn)\n",
+    "print(fname2)\n",
     "data2=pyfits.getdata(fname2)"
    ]
   },
@@ -228,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
